Fixing label positioning bug in Chrome
Removed extra spaces from CSS and modified HTML for labels

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -57,7 +57,7 @@ p {
 	padding: 4px;
 	line-height: 2.5rem;
 	border-radius: 0px;
-    background: rgba(0, 255, 255, 0.5); /* aqua background with 0.5 opacity */
+    background: rgba(4, 229, 237, 0.5); /* aqua background with 0.5 opacity */
 }
 
 .thought {
@@ -107,21 +107,6 @@ img.reflect {
 }
 
 
-/*
-.label {
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 24px;
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 1.4rem;
-	font-weight: 600;
-	border-radius: 1px;
-	padding: 0px 6px;
-	line-height: 4rem;
-	text-shadow: 1px 3px 2px red;
-	background: rgba(220, 195, 37, 0.2);
-}*/
 .homenav{
 	position: fixed;
     right:20px;
